--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "project-management-dashboard"]
 	path = project-management-dashboard
 	url = https://github.com/epimorphics/project-management-dashboard
-[submodule "dashboard-deploy"]
-	path = dashboard-deploy
-	url = ./dashboard-deploy/
+[submodule "dashboard-deploy/fuseki-docker"]
+	path = dashboard-deploy/fuseki-docker
+	url = https://github.com/epimorphics/dashboard-fuseki
