--- a/dashboard-deploy/docker-compose/docker-compose.yaml
+++ b/dashboard-deploy/docker-compose/docker-compose.yaml
@@ -32,3 +32,24 @@ services:
       - ./project-management-dashboard:/app:Z
     environment:
       MIX_ENV: dev
+  db:
+    image: cassandra
+    expose:
+      - 9042
+    volumes:
+      - cassandradata:/var/lib/cassandra
+  node:
+    image: node
+    volumes:
+      - ./response-time-dashboard:/app
+    depends_on:
+      - "db"
+    command: ["./wait-for-it.sh", "db:9042", "--", "npm", "run", "nodemon"]
+    working_dir: /app
+    environment:
+      - PERIOD=5
+    ports:
+      - 3000:3000
+
+volumes:
+  cassandradata:
